# civic-compiler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  civcmp
scripts/: dist.sh
src/: macros.h  main.c  main.ccn  user_types.h  utils.c  utils.h
src/analysis/: analysis.h  checkdivergence.c  closuretransparency.c  collect.c  diverge.c  divergecheck.c  divergence.c  error.c  error.h  free.c  functions.c  funtable.c  funtable.h  globals.c  resolve.c  resolve.h  typecheck.c  usage.c  vartable.c  vartable.h
src/astopt/: checkdead.c  checkprop.c  checkproploop.c  checkunroll.c  checkunrollscope.c  constfold.c  copyprop.c  countcalls.c  countreads.c  countwrites.c  deadfunctions.c  deadstores.c  directcaptures.c  divergence.c  escapes.c  estimatecost.c  exprsideeffects.c  extractcalls.c  extractstmts.c  functionsideeffects.c  identities.c  indirectcalls.c  loopunroll.c  propagatevalue.c  propintoloop.c  propvalue.c  reassoc.c  shrinkfuntables.c  shrinktables.c  shrinkvartables.c  sideeffects.c  transp.c  trivialcontrolflow.c  valueprop.c  valuepropagatable.c  valueproploop.c
src/codegen/: assembly.c  constants.c  mangling.c  normalizefloats.c  shrinkfuntables.c  shrinkvartables.c
src/desugar/: arrayassign.c  arraydecls.c  arrayparams.c  boolcasts.c  casts.c  declexprs.c  delwhile.c  dimreduce.c  forloops.c  ids.c  implicitreturns.c  ownedtable.c  stmtexprs.c  typeexprs.c  vardecls.c  whileloops.c
src/error/: error.c  error.h  span.h
src/free/: free.c
src/global/: globals.c  globals.h
src/globals/: globals.c  globals.h
src/lexical_analysis/: collect_functions.c  resolve.c  resolve_functions.c
src/opt/: closuretransparency.c  const_fold.c  controlflow.c  funtransp.c  identities.c  scalarconstfold.c  strength_reduction.c  subtraction.c  transp.c  trivialcontrolflow.c
src/opt/simp/: const_fold.c  constfold.c  deadcode.c  identities.c  trivial_ops.c
src/print/: print.c  print.h
src/scanparse/: lexer.l  parser.y  scanParse.c
src/stats/: count_ids.c  count_ops.c
src/table/: consttable.c  consttable.h  funtable.c  funtable.h  insert.h  table.h  vartable.c  vartable.h
test/: civic.h  run.bash
test/arrays/check_error/: array_assign.cvc  array_binop.cvc  array_dim_array.cvc  array_empty_init.cvc  array_init_array.cvc  array_init_scalar.cvc  array_monop.cvc  call_array_lit.cvc  call_array_slice.cvc  extern_array_use_dims.cvc  funcall.cvc  (+6 more)
test/fuzzer-generated/: fuzzer-generated-100.cvc  fuzzer-generated-1000.cvc  fuzzer-generated-1002.cvc  fuzzer-generated-1003.cvc  fuzzer-generated-1004.cvc  fuzzer-generated-1008.cvc  fuzzer-generated-1009.cvc  fuzzer-generated-1010.cvc  fuzzer-generated-1013.cvc  fuzzer-generated-1016.cvc  fuzzer-generated-1017.cvc  fuzzer-generated-1018.cvc  fuzzer-generated-102.cvc  fuzzer-generated-1020.cvc  fuzzer-generated-1021.cvc  fuzzer-generated-1022.cvc  fuzzer-generated-1025.cvc  fuzzer-generated-1026.cvc  fuzzer-generated-103.cvc  fuzzer-generated-1030.cvc  fuzzer-generated-1031.cvc  fuzzer-generated-1034.cvc  fuzzer-generated-1036.cvc  fuzzer-generated-1037.cvc  fuzzer-generated-1038.cvc  fuzzer-generated-1039.cvc  fuzzer-generated-104.cvc  fuzzer-generated-1042.cvc  fuzzer-generated-1043.cvc  fuzzer-generated-1044.cvc  fuzzer-generated-1045.cvc  fuzzer-generated-1048.cvc  fuzzer-generated-1049.cvc  fuzzer-generated-1052.cvc  fuzzer-generated-1053.cvc  fuzzer-generated-1054.cvc  fuzzer-generated-1055.cvc  fuzzer-generated-1056.cvc  fuzzer-generated-1058.cvc  fuzzer-generated-1059.cvc  (+607 more)
tests/: array.cvc  array.h  core.cvc  core.h  coreio.cvc  coreio.h  extensions.cvc  extensions.h  test.cvc
(+663 files in other folders)
